[gd_scene load_steps=7 format=4 uid="uid://ct6nhk22uaow7"]

[ext_resource type="Script" uid="uid://cms67ojw36tte" path="res://Scenes/ui/MenuOption/menu_option.gd" id="1_jwe1i"]
[ext_resource type="Theme" uid="uid://jo403re8lvp5" path="res://Assets/UI/Theme/Menu_Petit_Bouton.tres" id="2_25jo3"]
[ext_resource type="Texture2D" uid="uid://dvnk08ve485nw" path="res://Assets/UI/Tileset/UI - 16x16 UI Tileset.png" id="3_5f046"]
[ext_resource type="Theme" uid="uid://go7mn727e8yf" path="res://Assets/UI/Theme/Menu.tres" id="3_25jo3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5f046"]
texture = ExtResource("3_5f046")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
14:0/0 = 0
15:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
14:3/0 = 0
15:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
1:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
15:5/0 = 0
16:5/0 = 0
18:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
2:8/0 = 0
6:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
6:9/0 = 0
11:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
11:10/0 = 0
15:10/0 = 0
2:11/0 = 0
6:11/0 = 0
11:11/0 = 0
15:11/0 = 0
18:11/0 = 0
19:11/0 = 0
2:12/0 = 0
6:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
2:13/0 = 0
6:13/0 = 0
11:13/0 = 0
15:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
15:14/0 = 0
18:14/0 = 0
19:14/0 = 0
2:15/0 = 0
6:15/0 = 0
11:15/0 = 0
15:15/0 = 0
18:15/0 = 0
19:15/0 = 0

[sub_resource type="TileSet" id="TileSet_pkpb1"]
sources/0 = SubResource("TileSetAtlasSource_5f046")

[node name="MenuOption" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jwe1i")
metadata/_edit_vertical_guides_ = [576.0]

[node name="FondOption" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 426.0
offset_top = 199.0
offset_right = -426.0
offset_bottom = -199.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.8, 0.8, 1)

[node name="ColorRect" type="ColorRect" parent="FondOption"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 426.0
offset_top = 199.0
offset_right = -426.0
offset_bottom = -199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 12

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
vertical = true

[node name="Node2D" type="Node2D" parent="MarginContainer/BoxContainer"]
position = Vector2(6, 0)

[node name="TitreOptions" type="Label" parent="MarginContainer/BoxContainer/Node2D"]
offset_left = 77.0
offset_top = 4.0
offset_right = 150.0
offset_bottom = 22.0
size_flags_horizontal = 4
theme = ExtResource("3_25jo3")
text = "Options"
vertical_alignment = 1

[node name="TileMapLayer" type="TileMapLayer" parent="MarginContainer/BoxContainer/Node2D"]
tile_map_data = PackedByteArray("AAAFAAEAAAABAAIAAAAFAAIAAAABAAMAAAAGAAEAAAACAAIAAAAGAAIAAAACAAMAAAAHAAEAAAADAAIAAAAHAAIAAAADAAMAAAAIAAEAAAAEAAIAAAAIAAIAAAAEAAMAAAAEAAEAAAAAAAIAAAAJAAEAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_pkpb1")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 8
columns = 2

[node name="PleinEcran" type="Label" parent="MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_25jo3")
theme_override_font_sizes/font_size = 12
text = "Plein ecran"

[node name="PleinEcranCheck" type="CheckButton" parent="MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
button_pressed = true
icon_alignment = 1

[node name="GridContainer3" type="GridContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 8
columns = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 8
columns = 2

[node name="Musique" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_25jo3")
theme_override_font_sizes/font_size = 12
text = "Musique"

[node name="MusiqueSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Sons" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_25jo3")
theme_override_font_sizes/font_size = 12
text = "Sons"

[node name="SonsSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Retour" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_25jo3")
text = "continuer"
icon_alignment = 1

[connection signal="toggled" from="MarginContainer/VBoxContainer/GridContainer2/PleinEcranCheck" to="." method="_on_plein_ecran_check_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/MusiqueSlider" to="." method="_on_musique_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SonsSlider" to="." method="_on_sons_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Retour" to="." method="hide"]
